# run-0d306e30-0640-4768-acc8-fa5b5aaced11

./: MANIFEST.json  README.md  artifacts.json
code/: __init__.py  analysis.py  core.py  plotting.py  run_experiments.py  sympy_checks.py
experiments/: experiment_log.jsonl
knowledge/: notes.md  overview.md  refs.jsonl
knowledge/repos/pandapower/: .test_durations  CHANGELOG.rst  mypy.ini  pyproject.toml
knowledge/repos/pandapower/.github/workflows/: github_test_action.yml  test_release.yml
knowledge/repos/pandapower/doc/: elements.rst
knowledge/repos/pandapower/doc/elements/: vsc_stacked.rst
knowledge/repos/pandapower/pandapower/: auxiliary.py  build_branch.py  convert_format.py  file_io.py  groups.py  io_utils.py  network_structure.py  pd2ppc.py  pd2ppc_zero.py  powerflow.py  results.py  results_branch.py  results_bus.py  results_gen.py  run.py  runpm.py  sql_io.py
knowledge/repos/pandapower/pandapower/converter/cim/cim2pp/converter_classes/transformers/: powerTransformersCim16.py
knowledge/repos/pandapower/pandapower/converter/jao/: from_jao.py
knowledge/repos/pandapower/pandapower/converter/pandamodels/: to_pm.py
knowledge/repos/pandapower/pandapower/converter/powerfactory/: pp_import_functions.py  validate.py
knowledge/repos/pandapower/pandapower/create/: sgen_create.py  trafo_create.py
knowledge/repos/pandapower/pandapower/estimation/: results.py
knowledge/repos/pandapower/pandapower/grid_equivalents/: rei_generation.py
knowledge/repos/pandapower/pandapower/networks/: kerber_extreme_networks.py
knowledge/repos/pandapower/pandapower/networks/power_system_test_case_jsons/: GBnetwork.json  GBreducednetwork.json  case118.json  case11_iwamoto.json  case1354pegase.json  case14.json  case145.json  case1888rte.json  case24_ieee_rts.json  case2848rte.json  case2869pegase.json  case30.json  case300.json  case3120sp.json  case33bw.json  case39.json  case4gs.json  case5.json  case57.json  case5_demo_gridcal.json  case6470rte.json  case6495rte.json  case6515rte.json  case6ww.json  case89pegase.json  case9.json  case9241pegase.json  case_ieee30.json  case_illinois200.json  iceland.json
knowledge/repos/pandapower/pandapower/opf/: run_pandamodels.py
knowledge/repos/pandapower/pandapower/plotting/: collections.py  patch_makers.py  powerflow_results.py  simple_plot.py
knowledge/repos/pandapower/pandapower/plotting/plotly/: simple_plotly.py
knowledge/repos/pandapower/pandapower/protection/: utility_functions.py
knowledge/repos/pandapower/pandapower/test/: conftest.py  consistency_checks.py
knowledge/repos/pandapower/pandapower/test/api/: test_auxiliary.py  test_create.py  test_group.py
knowledge/repos/pandapower/pandapower/test/contingency/: test_contingency.py
knowledge/repos/pandapower/pandapower/test/control/: test_const_control.py  test_control.py  test_der_control.py  test_stactrl.py  test_vm_set_tap_control.py
knowledge/repos/pandapower/pandapower/test/control/testfiles/: station_ctrl_test_new.json
knowledge/repos/pandapower/pandapower/test/converter/: test_from_cim.py  test_from_jao.py  test_from_powerfactory.py  test_from_powerfactory_3ph.py  test_from_ppc.py  test_to_ppc_and_mpc.py
knowledge/repos/pandapower/pandapower/test/estimation/: test_wls_estimation.py
knowledge/repos/pandapower/pandapower/test/grid_equivalents/: test_get_equivalent.py  test_get_equivalent_networks.py  test_grid_equivalents_toolbox.py
knowledge/repos/pandapower/pandapower/test/loadflow/: result_test_network_generator.py  test_PTDF_LODF.py  test_dist_slack.py  test_facts_b2b_vsc.py  test_facts_ssc.py  test_facts_vsc.py  test_recycle.py  test_results.py  test_runpp.py  test_runpp_3ph.py  test_runpp_3ph_n_line.py  test_scenarios.py  test_tdpf.py
knowledge/repos/pandapower/pandapower/test/networks/: test_cigre_networks.py  test_create_example.py  test_dickert_lv_networks.py  test_kerber_extreme_networks.py  test_kerber_networks.py  test_lv_schutterwald.py  test_mv_oberrhein.py  test_power_system_test_cases.py  test_simple_pandapower_test_networks.py  test_synthetic_voltage_control_lv_networks.py
knowledge/repos/pandapower/pandapower/test/opf/: test_TNEP.py  test_basic.py  test_check_opf_data.py  test_dcline.py  test_pandamodels_converter.py  test_pandamodels_runpm.py
knowledge/repos/pandapower/pandapower/test/shortcircuit/: test_iec60909_4.py
knowledge/repos/pandapower/pandapower/test/timeseries/: test_output_writer.py  test_timeseries.py  test_timeseries_recycle.py
knowledge/repos/pandapower/pandapower/test/toolbox/: test_data_modification.py  test_element_selection.py  test_grid_modification.py  test_result_info.py
knowledge/repos/pandapower/pandapower/test/topology/: test_create_graph.py
knowledge/repos/pandapower/pandapower/topology/: graph_searches.py
knowledge/repos/pandapower/tutorials/: pandamodels_storage.ipynb  plotly_built-in.ipynb  plotly_maps.ipynb  plotly_traces.ipynb
paper/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
sources/: sources.json
(+18 files in other folders)
